--- a/src/ui/LibraryMemberOverview.fxml
+++ b/src/ui/LibraryMemberOverview.fxml
@@ -19,11 +19,11 @@
                <children>
                   <TableView fx:id="tblLibraryMember" fixedCellSize="0.0" layoutY="-2.0" prefHeight="548.0" prefWidth="584.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-2.0">
                     <columns>
-                        <TableColumn fx:id="colMemeberID" prefWidth="87.0" resizable="false" text="Memeber ID" />
-                        <TableColumn fx:id="colFirstName" prefWidth="77.0" resizable="false" text="First name" />
-                        <TableColumn fx:id="colLastName" prefWidth="98.0" resizable="false" text="Last name" />
-                        <TableColumn fx:id="colPhoneNumber" prefWidth="129.0" resizable="false" text="Phone number" />
-                      <TableColumn fx:id="colAddress" prefWidth="192.0" resizable="false" text="Address" />
+                        <TableColumn fx:id="colMemeberID" prefWidth="87.0" text="Memeber ID" />
+                        <TableColumn fx:id="colFirstName" prefWidth="77.0" text="First name" />
+                        <TableColumn fx:id="colLastName" prefWidth="98.0" text="Last name" />
+                        <TableColumn fx:id="colPhoneNumber" prefWidth="129.0" text="Phone number" />
+                      <TableColumn fx:id="colAddress" prefWidth="192.0" text="Address" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
